--- a/cheol.html
+++ b/cheol.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    자자자~! 안녕 나는 철원이야
+    <h1>응 만듬요</h1>
   </body>
 </html>
